# NIRTorch

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  pypi.yml
nirtorch/: __init__.py  convert_to_nir.py  from_nir.py  graph.py  graph_executor.py  graph_fx.py  graph_utils.py  interpreter.py  nir_interpreter.py  to_nir.py  torch_tracer.py  utils.py
tests/: braille.nir  feedback_graph.nir  test_bidirectional.py  test_conversion.py  test_from_nir.py  test_graph.py  test_graph_executor.py  test_graph_fx.py  test_graph_fx_from_nir.py  test_graph_fx_to_nir.py  test_graph_utils.py  test_load.py  test_nir.py  test_nir_interpreter.py  test_requirements.txt  test_sequential_graph.py  test_to_nir.py  test_torch_tracer.py
