[build-system]
requires = [
  "setuptools>=60",
  "setuptools-scm>=8.0"
]

[project]
name = "nirtorch"
description = "Neuromorphic Intermediate Representation"
authors = [
  { name = "Steven Abreu", email = "s.abreu@rug.nl" },
  { name = "Felix Bauer", email = "felix.bauer@synsen.ai" },
  { name = "Jason Eshraghian", email = "jeshragh@ucsc.edu" },
  { name = "Matthias Jobst", email = "matthias.jobst2@tu-dresden.de" },
  { name = "Gregor Lenz", email = "mail@lenzgregor.com" },
  { name = "Jens Egholm Pedersen", email = "jens@jepedersen.dk" },
  { name = "Sadique Sheik", email = "sadique.sheik@synsense.ai" },
]
readme = "README.md"
keywords = ["neuromorphic", "intermediate", "representation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch",
    "nir>=1.0.6",
]
dynamic = ["version"] # Load the version from setuptools_scm

[tool.setuptools_scm]

[tool.uv.sources]
nirtorch = { workspace = true }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "sinabs>=2.0.3",
]
